--- a/src/scss/component/icon.scss
+++ b/src/scss/component/icon.scss
@@ -7,7 +7,7 @@
 
 .arrow { background-position: center center; transition: $transitionFast; background-repeat: no-repeat; background-size: 100% 100%; }
 
-.icon.home { background-image: url('~img/icon/home0.svg'); }
+.icon.home { background-image: url('~img/icon/home.svg'); }
 .icon.home.big { background-image: url('~img/icon/home-big.svg'); }
 
 .icon.back, .icon.forward { background-image: url('~img/icon/back0.svg'); }
