--- a/src/scss/component/icon.scss
+++ b/src/scss/component/icon.scss
@@ -23,13 +23,13 @@
 .icon.checkbox { width: 24px; height: 24px; background-image: url('~img/icon/checkbox0.svg'); cursor: pointer; }
 .icon.checkbox.active { background-image: url('~img/icon/checkbox1.svg'); }
 
-.icon.relation.c-title { background-image: url('~img/icon/dataview/relation/title.svg'); }
 .icon.relation.c-description { background-image: url('~img/icon/dataview/relation/description.svg'); }
+.icon.relation.c-title { background-image: url('~img/icon/dataview/relation/title.svg'); }
 .icon.relation.c-number { background-image: url('~img/icon/dataview/relation/number.svg'); }
 .icon.relation.c-date { background-image: url('~img/icon/dataview/relation/date.svg'); }
 .icon.relation.c-select { background-image: url('~img/icon/dataview/relation/select.svg'); }
 .icon.relation.c-multiselect { background-image: url('~img/icon/dataview/relation/multiselect.svg'); }
-.icon.relation.c-link { background-image: url('~img/icon/dataview/relation/link.svg'); }
+.icon.relation.c-object { background-image: url('~img/icon/dataview/relation/link.svg'); }
 .icon.relation.c-file { background-image: url('~img/icon/dataview/relation/file.svg'); }
 .icon.relation.c-checkbox { background-image: url('~img/icon/dataview/relation/checkbox.svg'); }
 .icon.relation.c-url { background-image: url('~img/icon/dataview/relation/url.svg'); }
