--- a/src/scss/menu/dataview/relation.scss
+++ b/src/scss/menu/dataview/relation.scss
@@ -17,6 +17,7 @@
 		.wrap { padding: 0px 16px 8px 16px; }
 		.line { height: 1px; margin: 8px 0px; background: $colorLightGrey; }
 		.input { border: 1px solid $colorLightGrey; padding: 0px 8px; }
+		.switch { position: absolute; right: 16px; top: 50%; margin-top: -8px; }
 		
 		.icon.arrow { 
 			width: 20px; height: 20px; position: absolute; right: 14px; top: 50%; margin: -10px 0px 0px 0px; 
