ObjectTypeRelationAdd, ObjectTypeRelationEdit integration

--- a/src/scss/block/dataview/view/grid.scss
+++ b/src/scss/block/dataview/view/grid.scss
@@ -22,13 +22,13 @@
 			.head:last-child {
 				.name { border: 0px; }
 			}
-			.head.last { width: auto; }
+			.head.last { width: 100%; }
 
 			.cellContent { @include text-overflow-nw; width: 100%; }
 				
 			td.cell { padding: 14px; border-bottom: 1px solid #e0ded2; vertical-align: top; position: relative; word-break: break-word; }
 			td.cell:last-child { border-right: 0px; }
-			td.cell.last { width: auto; }
+			td.cell.last { width: 100%; }
 			td.cell {
 				.name { @include text-overflow-nw; width: 100%; }
 			}
