--- a/src/scss/block/cover.scss
+++ b/src/scss/block/cover.scss
@@ -75,7 +75,7 @@
 	}
 }
 
-.editorWrapper.withIconAndCover {
+.editorWrapper.withIconAndCover.align0 {
 	.block.blockCover {
 		.elements {
 			.buttons { left: 80px; }
@@ -83,7 +83,7 @@
 	}
 }
 
-.editorWrapper.isProfile.withIconAndCover {
+.editorWrapper.isProfile.withIconAndCover.align0 {
 	.block.blockCover {
 		.elements {
 			.buttons { left: 112px; }
