--- a/src/scss/block/iconPage.scss
+++ b/src/scss/block/iconPage.scss
@@ -2,6 +2,6 @@
 
 .blocks {
 	.block.blockIconPage {
-		.smile { position: relative; z-index: 2; }
+		.smile { position: relative; z-index: 2; display: inline-block;}
 	}
 }
