--- a/src/scss/menu/dataview/relation.scss
+++ b/src/scss/menu/dataview/relation.scss
@@ -18,6 +18,9 @@
 		.line { height: 1px; margin: 8px 0px; background: $colorLightGrey; }
 		.input { border: 1px solid $colorLightGrey; padding: 0px 8px; }
 		.switch { position: absolute; right: 16px; top: 50%; margin-top: -8px; }
+
+		.item.disabled { cursor: default; opacity: 1 !important; }
+		.item.disabled:hover::before { opacity: 0; }
 		
 		.icon.arrow { 
 			width: 20px; height: 20px; position: absolute; right: 14px; top: 50%; margin: -10px 0px 0px 0px; 
