--- a/src/scss/block/dataview/view/grid.scss
+++ b/src/scss/block/dataview/view/grid.scss
@@ -22,6 +22,9 @@
 			.head:last-child {
 				.name { border: 0px; }
 			}
+			.head.last {
+				.icon.plus { margin: 0px; }
+			}
 
 			.cellContent { @include text-overflow-nw; width: 100%; }
 				
