--- a/src/scss/menu/block/common.scss
+++ b/src/scss/menu/block/common.scss
@@ -39,6 +39,8 @@
 			
 			.icon.line { background-image: url('~img/icon/menu/action/block/line1.svg'); }
 			.icon.dot { background-image: url('~img/icon/menu/action/block/dot1.svg'); }
+
+			.icon.relation { background-image: url('~img/icon/menu/action/block/relation1.svg'); }
 		}
 	}
 }
