--- a/src/scss/menu/block/icon.scss
+++ b/src/scss/menu/block/icon.scss
@@ -28,6 +28,8 @@
 		
 		.icon.line { background-image: url('~img/icon/menu/action/block/line0.svg'); }
 		.icon.dot { background-image: url('~img/icon/menu/action/block/dot0.svg'); }
+
+		.icon.relation { background-image: url('~img/icon/menu/action/block/relation0.svg'); }
 		
 		.icon.bold { background-image: url('~img/icon/menu/action/mark/bold0.svg'); }
 		.icon.italic { background-image: url('~img/icon/menu/action/mark/italic0.svg'); }
