--- a/src/scss/menu/block/icon.scss
+++ b/src/scss/menu/block/icon.scss
@@ -35,8 +35,7 @@
 		.icon.relation.c-number { background-image: url('~img/icon/dataview/relation/number.svg'); }
 		.icon.relation.c-date { background-image: url('~img/icon/dataview/relation/date.svg'); }
 		.icon.relation.c-select { background-image: url('~img/icon/dataview/relation/select.svg'); }
-		.icon.relation.c-multiselect { background-image: url('~img/icon/dataview/relation/multiselect.svg'); }
-		.icon.relation.c-object { background-image: url('~img/icon/dataview/relation/link.svg'); }
+		.icon.relation.c-object { background-image: url('~img/icon/dataview/relation/object.svg'); }
 		.icon.relation.c-file { background-image: url('~img/icon/dataview/relation/file.svg'); }
 		.icon.relation.c-checkbox { background-image: url('~img/icon/dataview/relation/checkbox.svg'); }
 		.icon.relation.c-url { background-image: url('~img/icon/dataview/relation/url.svg'); }
@@ -58,6 +57,7 @@
 		.icon.download { background-image: url('~img/icon/menu/action/download0.svg'); }
 		.icon.rename { background-image: url('~img/icon/menu/action/rename0.svg'); }
 		.icon.replace { background-image: url('~img/icon/menu/action/replace0.svg'); }
+		.icon.add { background-image: url('~img/icon/menu/action/add0.svg'); }
 		
 		.icon.undo { background-image: url('~img/icon/menu/action/undo0.svg'); }
 		.icon.redo { background-image: url('~img/icon/menu/action/redo0.svg'); }
