--- a/src/scss/component/header.scss
+++ b/src/scss/component/header.scss
@@ -45,6 +45,7 @@
 	.icon.add { background-image: url('~img/icon/header/add.svg'); }
 	.icon.settings { background-image: url('~img/icon/header/settings.svg'); }
 	.icon.relation { background-image: url('~img/icon/header/relation.svg'); }
+	.icon.new-set { background-image: url('~img/icon/header/set.svg'); }
 
 	.side { position: absolute; top: 5px; height: 28px; line-height: 28px; }
 
