--- a/src/scss/menu/common.scss
+++ b/src/scss/menu/common.scss
@@ -83,6 +83,8 @@
 			.name { line-height: 22px; }
 		}
 
+		.line { height: 1px; margin: 8px 0px; background: $colorLightGrey; }
+
 		.sectionName { padding: 5px 16px; @include text-very-small; text-transform: uppercase; }
 		
 		.section { border-bottom: 1px solid $colorLightGrey; padding: 8px 0px; }
