--- a/src/scss/menu/dataview/option.scss
+++ b/src/scss/menu/dataview/option.scss
@@ -4,13 +4,16 @@
 	.menu.menuDataviewOptionList { width: 228px; }
 	.menu.menuDataviewOptionList {
 		.label { color: $colorDarkGrey; @include text-common; padding: 0px 16px; }
-		.line { height: 1px; margin: 8px 0px; background: $colorLightGrey; }
 		.item { padding: 5px 10px; }
+		.item:hover::before { opacity: 0.15; }
+		.tagItem { vertical-align: top; margin-top: 1px; }
+		.icon.more { position: absolute; right: 14px; top: 50%; margin-top: -10px; }
 	}
 	
-	.menu.menuDataviewOptionEdit { width: 208px; }
+	.menu.menuDataviewOptionEdit { width: 224px; }
 	.menu.menuDataviewOptionEdit {
 		.wrap { padding: 8px 16px; }
 		.input { border: 1px solid $colorLightGrey; font-size: 12px; padding: 0px 8px; }
+		.item:hover::before { opacity: 0.15; }
 	}	
 }
