--- a/src/scss/menu/search.scss
+++ b/src/scss/menu/search.scss
@@ -1,7 +1,7 @@
 @import "~scss/_vars";
 
 .menus {
-	.menu.menuSearch { width: 400px; height: 44px; padding: 11px 16px; position: fixed; }
+	.menu.menuSearch { width: 400px; height: 44px; padding: 11px 16px; position: fixed; top: 42px !important; }
 	.menu.menuSearch {
 		.flex { width: 100%; }
 		.input { width: 100%; height: 22px; padding: 0px; flex: auto; width: calc(100% - 100px); }
