select options state management, relations refactoring

--- a/src/scss/block/dataview/view/grid.scss
+++ b/src/scss/block/dataview/view/grid.scss
@@ -74,7 +74,7 @@
 
 			td.cell.c-checkbox { padding: 12px 14px; }
 
-			td.cell.c-select { cursor: text; }
+			td.cell.c-select { cursor: text; padding-bottom: 8px; }
 			td.cell.c-select {
 				.tagItem { margin: 0px 0px 6px 0px; vertical-align: top; }
 				#edit { cursor: text; -webkit-user-modify: read-write-plaintext-only; }
