tag remove option

--- a/src/scss/component/tag.scss
+++ b/src/scss/component/tag.scss
@@ -1,11 +1,19 @@
 @import "~scss/_vars";
 
 .tagItem {
-	padding: 0px 4px; @include text-small; border-radius: 3px; white-space: nowrap;
+	padding: 0px 4px; @include text-small; border-radius: 3px; white-space: nowrap; position: relative;
 	display: inline-block; vertical-align: middle; cursor: pointer; max-width: 100%;
 }
 .tagItem {
 	.inner { display: inline-block; width: 100%; @include text-overflow-nw;  vertical-align: top; }
+	.icon.remove { 
+		width: 10px; height: 10px; position: absolute; right: 4px; top: 4px; background-image: url('~img/icon/dataview/tagRemove0.svg'); 
+		cursor: pointer;
+	}
+}
+.tagItem.canEdit { padding-right: 18px; }
+.tagItem:hover {
+	.icon.remove { background-image: url('~img/icon/dataview/tagRemove1.svg'); }
 }
 .tagItem.grey { color: #8c9ea5; background: #ebeff1; }
 .tagItem.yellow { color: #b2a616; background: #fbf5b8; }
