--- a/src/scss/menu/common.scss
+++ b/src/scss/menu/common.scss
@@ -11,6 +11,7 @@
 		box-shadow: 0px 4px 16px rgba(0, 0, 0, 0.2); background: #fff; opacity: 0; transform: scale3d(0.8,0.8,1);
 		transition: opacity 0.05s ease-in-out, transform 0.05s ease-in-out;
 	}
+	.menu.noAnimation { transition: none; }
 	.menu.show { opacity: 1; transform: scale3d(1,1,1); }
 	.menu * { user-select: none; }
 	
