--- a/src/scss/menu/dataview/option.scss
+++ b/src/scss/menu/dataview/option.scss
@@ -2,6 +2,7 @@
 
 .menus {
 	.menu.menuDataviewOptionList {
+		.content { max-height: 250px; }
 		.label { color: $colorDarkGrey; @include text-common; padding: 0px 16px; }
 		.item { padding: 5px 10px; }
 		.item:hover::before { opacity: 0.15; }
