--- a/src/scss/debug.scss
+++ b/src/scss/debug.scss
@@ -40,7 +40,7 @@ html.debug {
 		}
 
 		.block.blockRelation {
-			.icon, .input { background-color: rgba(0,0,255,0.1); }
+			.icon, .input, .name { background-color: rgba(0,0,255,0.1); }
 		}
 	}
 	
