--- a/src/scss/component/icon.scss
+++ b/src/scss/component/icon.scss
@@ -23,6 +23,7 @@
 .icon.checkbox { width: 24px; height: 24px; background-image: url('~img/icon/checkbox0.svg'); cursor: pointer; }
 .icon.checkbox.active { background-image: url('~img/icon/checkbox1.svg'); }
 
+.icon.relation.default { background-image: url('~img/icon/menu/action/block/relation0.svg'); }
 .icon.relation.c-description { background-image: url('~img/icon/dataview/relation/description.svg'); }
 .icon.relation.c-title { background-image: url('~img/icon/dataview/relation/title.svg'); }
 .icon.relation.c-number { background-image: url('~img/icon/dataview/relation/number.svg'); }
