--- a/src/scss/component/loader.scss
+++ b/src/scss/component/loader.scss
@@ -2,10 +2,9 @@
 
 .loaderWrapper { width: 24px; height: 24px; margin: 0px auto; position: relative; }
 .loaderWrapper {
-	.loader, .loader:after { border-radius: 100%; width: 24px; height: 24px; }
 	.loader {
-		border: 2px solid #eae9e0; border-left: 2px solid $colorDarkGrey; position: absolute; left: 50%; top: 50%; 
-		margin: -12px 0px 0px -12px; transform: translateZ(0); animation: load 0.8s infinite linear;
+		border: 2px solid #eae9e0; border-radius: 100%; width: 100%; height: 100%; border-left: 2px solid $colorDarkGrey; position: absolute; 
+		left: 50%; top: 50%; margin: -12px 0px 0px -12px; transform: translateZ(0); animation: load 0.8s infinite linear;
 	}
 }
 
