--- a/src/scss/menu/dataview/object.scss
+++ b/src/scss/menu/dataview/object.scss
@@ -1,6 +1,14 @@
 @import "~scss/_vars";
 
 .menus {
+	.menu.menuDataviewObject { width: 228px; }
+	.menu.menuDataviewObject {
+		.form { padding: 0px 10px; }
+		.line { height: 1px; margin: 8px 0px; background: $colorLightGrey; }
+		.input { padding: 0px; font-size: 12px; height: 18px; }
+		.item { padding: 5px 10px; }
+	}
+
 	.menu.menuDataviewObjectType { width: 224px; }
 	.menu.menuDataviewObjectType {
 		.content { padding-bottom: 11px; }
@@ -15,5 +23,4 @@
 			background-image: url('~img/arrow/menu.svg'); 
 		}
 	}
-
 }
