#838: sync status initial commit

--- a/src/scss/_vars.scss
+++ b/src/scss/_vars.scss
@@ -10,6 +10,7 @@ $colorBlue: #3e58eb;
 $colorIce: #2aa7ee;
 $colorTeal: #0fc8ba;
 $colorLime: #5dd400;
+$colorGreen: #57c600;
 
 $transitionFast: all 0.2s ease-in-out;
 
