--- a/src/scss/common.scss
+++ b/src/scss/common.scss
@@ -61,7 +61,8 @@ body.platformWindows {
 	
 	.header { top: 30px !important; }
 	.header {
-		.logo { width: 20px; height: 20px; left: 16px; margin: 0px; top: 9px; background-image: url('~img/logoSmall.svg'); }
+		.icon.logo { width: 20px !important; height: 20px!important; left: 16px; margin: 0px; top: 9px; background: url('~img/logoSmall.svg'); }
+		.icon.logo:hover { background-color: none; }
 	}
 
 	.pageMainEdit .wrapper { padding-top: 68px; }
