--- a/src/scss/page/main/index.scss
+++ b/src/scss/page/main/index.scss
@@ -34,7 +34,7 @@
 			}
 			.icon.more:hover { background-image: url('~img/icon/index/more1.svg'); }
 		}
-		.item.dragging { transition: none; box-shadow: 0px 1px 5px rgba(0, 0, 0, 0.2); }
+		.item.isDragging { transition: none; box-shadow: 0px 1px 5px rgba(0, 0, 0, 0.2); }
 		.item.last { margin-right: 0px; }
 		
 		.item:hover {
