--- a/src/scss/component/editor.scss
+++ b/src/scss/component/editor.scss
@@ -7,8 +7,7 @@
 	.editor {
 		.icon.buttonAdd { 
 			width: 20px; height: 20px; position: absolute; z-index: 5; cursor: pointer; user-select: none;
-			background-image: url('~img/icon/block/add.svg'); opacity: 0;
-			transition: opacity 0.05s ease-in-out;
+			background-image: url('~img/icon/block/add.svg'); transition: none;
 		}
 		
 		.blockLast { margin-left: -50px; }
