--- a/src/scss/block/dataview/view/grid.scss
+++ b/src/scss/block/dataview/view/grid.scss
@@ -60,12 +60,12 @@
 					padding: 0px; background: none; padding: 14px; box-shadow: 0px 0px 0px 2px $colorOrange inset; overflow: auto; font-family: 'Inter';
 					position: absolute; left: 0px; top: 0px; height: auto; width: 100%; background: #fff; z-index: 1;
 				}
+				.cellContent { height: auto; }
+				.cellContent {
+					.name { display: inline-block; }
+				}
             }
 			td.cell.isEditing.c-description { padding: 0px !important; box-shadow: 0px 0px; }
-			td.cell.isEditing .cellContent { height: auto; }
-			td.cell.isEditing .cellContent {
-				.name { display: inline-block; }
-			}
 			td.cell.isEditing.c-select {
 				.filter { display: inline-block; }
 			}
