--- a/src/scss/block/relation.scss
+++ b/src/scss/block/relation.scss
@@ -14,14 +14,18 @@
 		}
 
 		.sides { display: flex; }
-		.side {
-			.name { display: inline-block; vertical-align: top; @include text-common; line-height: 20px; @include text-overflow-nw; }
+		.info { width: 200px; margin-right: 20px; }
+		.info {
+			.name { 
+				display: inline-block; vertical-align: top; @include text-common; line-height: 20px; @include text-overflow-nw; 
+				width: calc(100% - 24px); color: #6c6a5f;
+			}
 		}
-		.side.left { width: 200px; margin-right: 20px; }
-		.side.left {
-			.name { width: calc(100% - 24px); color: #6c6a5f;}
+
+		.cell { @include text-common; width: calc(100% - 220px); position: relative; padding: 2px; }
+		.cell {
+			.inputWithFile { border: 0px; padding: 0px; }
 		}
-		.side.right { width: calc(100% - 220px); position: relative; }
 
 		.cell.isEditing { box-shadow: 0px 0px 0px 2px $colorOrange inset; border-radius: 2px; z-index: 1; }
 		.cell.isEditing {
@@ -30,24 +34,24 @@
 				padding: 0px; background: none; padding: 14px; box-shadow: 0px 0px 0px 2px $colorOrange inset; overflow: auto; font-family: 'Inter';
 				position: absolute; left: 0px; top: 0px; height: auto; width: 100%; background: #fff; z-index: 1;
 			}
+			.cellContent { height: auto; padding: 2px; }
+			.cellContent {
+				.name { display: inline-block; }
+			}
 		}
 		.cell.isEditing.c-description { padding: 0px !important; box-shadow: 0px 0px; }
-		.cell.isEditing .cellContent { height: auto; }
-		.cell.isEditing .cellContent {
-			.name { display: inline-block; }
-		}
 		.cell.isEditing.c-select {
 			.filter { display: inline-block; }
 		}
 		
-		.cellContent.c-title { cursor: text; }
-		.cellContent.c-title {
+		.cell.c-title { cursor: text; }
+		.cell.c-title {
 			.name { width: calc(100% - 24px); }
 			.smile { margin-right: 4px; }
 		}
 
-		.cellContent.c-select { cursor: text; padding-bottom: 8px; }
-		.cellContent.c-select {
+		.cell.c-select { cursor: text; padding-bottom: 8px; }
+		.cell.c-select {
 			.tagItem { margin: 0px 6px 6px 0px; vertical-align: top; }
 			.DraggableTags { display: inline; vertical-align: top; line-height: 0px; }
 			.DraggableTags::after { display: none; }
