--- a/src/scss/component/editor.scss
+++ b/src/scss/component/editor.scss
@@ -7,8 +7,9 @@
 	.editor {
 		.icon.buttonAdd { 
 			width: 20px; height: 20px; position: absolute; z-index: 5; cursor: pointer; user-select: none;
-			background-image: url('~img/icon/block/add.svg'); transition: none;
+			background-image: url('~img/icon/block/add.svg'); transition: none; display: none;
 		}
+		.icon.buttonAdd.show { display: block; }
 		
 		.blockLast { margin-left: -50px; }
 	}
