BlockRelation new and old relations

--- a/src/scss/block/relation.scss
+++ b/src/scss/block/relation.scss
@@ -2,68 +2,69 @@
 
 .blocks {
 	.block.blockRelation { line-height: 20px; }
-	.block.blockRelation {
-		.icon.relation { width: 20px; height: 20px; margin-right: 4px; vertical-align: top; }
-		.icon.expand { display: none; }
-		.icon.checkbox { background-image: url('~img/icon/dataview/checkbox0.svg'); }
-		.icon.checkbox.active { background-image: url('~img/icon/dataview/checkbox1.svg'); }
+	.block.blockRelation > .wrapContent > .selectable > .dropTarget { padding: 2px 0px; }
+}
 
-		.input { 
-			@include text-common; line-height: 20px; vertical-align: top; display: inline-block; width: calc(100% - 24px); 
-			height: 20px; padding: 0px;
-		}
+.menus .menu.menuBlockRelationList, 
+.blocks .block.blockRelation {
+	.icon.relation { width: 20px; height: 20px; margin-right: 4px; vertical-align: top; }
+	.icon.expand { display: none; }
+	.icon.checkbox { background-image: url('~img/icon/dataview/checkbox0.svg'); }
+	.icon.checkbox.active { background-image: url('~img/icon/dataview/checkbox1.svg'); }
 
-		.sides { display: flex; }
-		.info { width: 200px; margin-right: 20px; }
-		.info {
-			.name { 
-				display: inline-block; vertical-align: top; @include text-common; line-height: 20px; @include text-overflow-nw; 
-				width: calc(100% - 24px); color: #6c6a5f;
-			}
-		}
-
-		.cell { @include text-common; width: calc(100% - 220px); position: relative; padding: 2px; }
-		.cell {
-			.inputWithFile { border: 0px; padding: 0px; }
-		}
-
-		.cell.isEditing { box-shadow: 0px 0px 0px 2px $colorOrange inset; border-radius: 2px; z-index: 2; }
-		.cell.isEditing {
-			.input-text { padding: 0px; height: 20px; }
-			.textarea { 
-				padding: 0px; background: none; padding: 14px; box-shadow: 0px 0px 0px 2px $colorOrange inset; overflow: auto; font-family: 'Inter';
-				position: absolute; left: 0px; top: 0px; height: auto; width: 100%; background: #fff; z-index: 10;
-			}
-			.cellContent { height: auto; padding: 2px; }
-			.cellContent {
-				.name { display: inline-block; }
-			}
-		}
-		.cell.isEditing.c-description { padding: 0px !important; box-shadow: 0px 0px; }
-		.cell.isEditing.c-select {
-			.filter { display: inline-block; }
-		}
-		
-		.cell.c-title { cursor: text; }
-		.cell.c-title {
-			.name { width: calc(100% - 24px); }
-			.smile { margin-right: 4px; }
-		}
-
-		.cell.c-select { cursor: text; padding-bottom: 8px; }
-		.cell.c-select {
-			.tagItem { margin: 0px 6px 6px 0px; vertical-align: top; }
-			.DraggableTags { display: inline; vertical-align: top; line-height: 0px; }
-			.DraggableTags::after { display: none; }
-
-			.filter { cursor: text; margin-right: 0px; height: 18px; min-width: 18px; padding: 0px; display: none; }
-			.filter {
-				#filter { -webkit-user-modify: read-write-plaintext-only; position: absolute; width: 100%; height: 100%; left: 0px; top: 0px; }
-				#placeHolder { color: $colorDarkGrey; }
-			}
-		}
-		
+	.input { 
+		@include text-common; line-height: 20px; vertical-align: top; display: inline-block; width: calc(100% - 24px); 
+		height: 20px; padding: 0px;
 	}
 
-	.block.blockRelation > .wrapContent > .selectable > .dropTarget { padding: 2px 0px; }
+	.sides { display: flex; }
+
+	.info { width: 200px; margin-right: 20px; }
+	.info {
+		.name { 
+			display: inline-block; vertical-align: top; @include text-common; line-height: 20px; @include text-overflow-nw; 
+			width: calc(100% - 24px); color: #6c6a5f;
+		}
+	}
+
+	.cell { @include text-common; width: calc(100% - 220px); position: relative; padding: 2px; }
+	.cell {
+		.inputWithFile { border: 0px; padding: 0px; }
+	}
+
+	.cell.isEditing { box-shadow: 0px 0px 0px 2px $colorOrange inset; border-radius: 2px; z-index: 2; }
+	.cell.isEditing {
+		.input-text { padding: 0px; height: 20px; }
+		.textarea { 
+			padding: 0px; background: none; padding: 14px; box-shadow: 0px 0px 0px 2px $colorOrange inset; overflow: auto; font-family: 'Inter';
+			position: absolute; left: 0px; top: 0px; height: auto; width: 100%; background: #fff; z-index: 10;
+		}
+		.cellContent { height: auto; padding: 2px; }
+		.cellContent {
+			.name { display: inline-block; }
+		}
+	}
+	.cell.isEditing.c-description { padding: 0px !important; box-shadow: 0px 0px; }
+	.cell.isEditing.c-select {
+		.filter { display: inline-block; }
+	}
+	
+	.cell.c-title { cursor: text; }
+	.cell.c-title {
+		.name { width: calc(100% - 24px); @include text-overflow-nw; display: inline-block; vertical-align: top; }
+		.smile { margin-right: 4px; }
+	}
+
+	.cell.c-select { cursor: text; }
+	.cell.c-select {
+		.tagItem { margin: 0px 6px 6px 0px; vertical-align: top; }
+		.DraggableTags { display: inline; vertical-align: top; line-height: 0px; }
+		.DraggableTags::after { display: none; }
+
+		.filter { cursor: text; margin-right: 0px; height: 18px; min-width: 18px; padding: 0px; display: none; }
+		.filter {
+			#filter { -webkit-user-modify: read-write-plaintext-only; position: absolute; width: 100%; height: 100%; left: 0px; top: 0px; }
+			#placeHolder { color: $colorDarkGrey; }
+		}
+	}
 }
