--- a/src/scss/block/relation.scss
+++ b/src/scss/block/relation.scss
@@ -9,7 +9,7 @@
 .blocks .block.blockRelation {
 	.icon.relation { width: 20px; height: 20px; margin-right: 4px; vertical-align: top; }
 	.icon.expand { display: none; }
-	.icon.checkbox { background-image: url('~img/icon/dataview/checkbox0.svg'); }
+	.icon.checkbox { width: 20px; height: 20px; vertical-align: top; background-image: url('~img/icon/dataview/checkbox0.svg'); }
 	.icon.checkbox.active { background-image: url('~img/icon/dataview/checkbox1.svg'); }
 
 	.input { 
@@ -19,7 +19,7 @@
 
 	.sides { display: flex; }
 
-	.info { width: 200px; margin-right: 20px; }
+	.info { width: 200px; margin-right: 20px; padding: 2px 0px; }
 	.info {
 		.name { 
 			display: inline-block; vertical-align: top; @include text-common; line-height: 20px; @include text-overflow-nw; 
@@ -27,7 +27,7 @@
 		}
 	}
 
-	.cell { @include text-common; width: calc(100% - 220px); position: relative; padding: 2px; }
+	.cell { @include text-common; width: calc(100% - 220px); position: relative; padding: 2px 0px; line-height: 20px; }
 	.cell {
 		.inputWithFile { border: 0px; padding: 0px; }
 	}
